# api-monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api_monitoring/: __init__.py  main.py
api_monitoring/alerting/: telegram.py
api_monitoring/clients/: aws_client.py
api_monitoring/config/: __init__.py
api_monitoring/monitoring/: maintenance.py  monitor.py
api_monitoring/utils/: logging.py  network.py
tests/: __init__.py  test_config.py
